<resources>
    <string name="app_name" translatable="false">LDolphin</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="menu_fragment_profile">Profile</string>
    <string name="menu_fragment_setting">Setting</string>
    <string name="menu_fragment_logout">Logout</string>
    <string name="edittext_searching">Search…</string>
    <string name="cannot_loading_data">Can not loading data</string>
    <string name="title_activity_settings">Settings</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="need_register">Need register?</string>
    <string name="server_ip">Server IP</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="cmnd">Identity Card</string>
    <string name="register">Register</string>
    <string name="need_login">Need login?</string>
    <string name="search_name">Name</string>
    <string name="search_title">Title</string>
    <string name="choose_image">Choose an image</string>
    <string name="or">Or</string>
    <string name="take_image">Take Picture</string>
    <string name="key_is_modern_layout" translatable="false">is_modern_layout</string>
    <string name="title_modern_layout">Use modern layout</string>

</resources>
