<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewPagerFragment.UploadFragment">

    <uk.co.senab.photoview.PhotoView
        android:id="@+id/iv_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/btn_picker_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/colorPrimary"
            android:padding="10dp"
            android:text="@string/choose_image"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_picker_image"
            android:layout_centerInParent="true"
            android:text="@string/or" />

        <Button
            android:id="@+id/btn_take_pic"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@id/tv_or"
            android:layout_centerInParent="true"
            android:backgroundTint="@color/colorPrimary"
            android:padding="10dp"
            android:text="@string/take_image"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="15sp" />
    </RelativeLayout>

</RelativeLayout>