<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_activity_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <uk.co.senab.photoview.PhotoView
        android:id="@+id/pvBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <include layout="@layout/searching_toolbar" />

    <LinearLayout
        android:id="@+id/ll_search_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_search_by_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:background="@drawable/border_edittext"
            android:backgroundTint="@color/colorGray"
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp"
            android:text="@string/search_name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_search_by_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_edittext"
            android:backgroundTint="@color/colorGray"
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp"
            android:text="@string/search_title"
            android:textSize="20sp" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_searching_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ll_search_group"
        android:layout_marginTop="5dp" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_searching_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ll_search_group"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/tv_cant_load_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/cannot_loading_data" />

</RelativeLayout>
